# wg-auth

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_en.md  authd.conf.example  docker-compose.yml  project.md  update2git.bat  wg0.conf.example
.github/workflows/: build-linux.yml  build-windows.yml  docker-image.yml
client/: CMakeLists.txt
client/src/: client_api.c  client_api.h  client_wg.c  client_wg.h  main.c
server/: CMakeLists.txt
server/src/: add_user.c  api_handlers.c  api_handlers.h  auth.c  auth.h  config.c  config.h  db.c  db.h  ip_pool.c  ip_pool.h  main.c  reaper.c  reaper.h  util.c  util.h  wg_ctl.c  wg_ctl.h
windows-ui/: .gitignore  authwgui.lpi  authwgui.lps  authwgui.res  config.ini  main.lfm  main.pas  resources.rc
windows-ui/backup/: authwgui.lpi  authwgui.lpr  authwgui.lps  main.lfm
windows/client/: CMakeLists.txt
windows/client/include/: authwg.h
windows/client/src/: authwg.cpp  win_http.cpp  win_http.h
